--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "typescript",
+  "name": "nemophila",
   "version": "1.0.0",
   "main": "build/index.js",
   "repository": "git@github.com:chao7150/typescript.git",
   "author": "Satoru Yokoyama <22640673+chao7150@users.noreply.github.com>",
   "license": "MIT",
+  "private": "true",
+  "workspaces": {"packages": ["packages/*"] },
   "scripts": {
-    "build": "yarn clean && tsc -p ./tsconfig.json",
+    "build": "",
     "clean": "rm -rf ./build/*",
     "commit": "cz",
     "debug": "yarn build && yarn start",
